@@ -2813,7 +2813,7 @@ block_move_call (rtx dest_reg, rtx src_reg, rtx bytes_rtx)
    operands[2] is the number of bytes to move.
    operands[3] is the alignment.  */
 
-void
+int
 m32r_expand_block_move (rtx operands[])
 {
   rtx           orig_dst  = operands[0];
@@ -2828,7 +2828,7 @@ m32r_expand_block_move (rtx operands[])
   rtx           dst_reg;
 
   if (constp && bytes <= 0)
-    return;
+    return 1;
 
   /* Move the address into scratch registers.  */
   dst_reg = copy_addr_to_reg (XEXP (orig_dst, 0));
@@ -2843,7 +2843,7 @@ m32r_expand_block_move (rtx operands[])
   if (optimize_size || ! constp || align != UNITS_PER_WORD)
     {
       block_move_call (dst_reg, src_reg, bytes_rtx);
-      return;
+      return 0;
     }
 
   leftover = bytes % MAX_MOVE_BYTES;
@@ -2900,6 +2900,7 @@ m32r_expand_block_move (rtx operands[])
     emit_insn (gen_movstrsi_internal (dst_reg, src_reg, GEN_INT (leftover),
 				      gen_reg_rtx (SImode),
 				      gen_reg_rtx (SImode)));
+    return 1;
 }
 
 
