@@ -2673,8 +2673,10 @@
 {
   if (operands[0])		/* avoid unused code messages */
     {
-      m32r_expand_block_move (operands);
-      DONE;
+      if (m32r_expand_block_move (operands))
+        DONE;
+      else
+        FAIL;
     }
 }")
 
